// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmojiAvatar Snapshot - different sizes text emoji and diferent size 1`] = `
<View
  className="w-6 h-6 rounded-sm flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary"
>
  <Text
    className="text-xs"
  >
    test
  </Text>
</View>
`;

exports[`EmojiAvatar Snapshot - different sizes text emoji and diferent size 2`] = `
<View
  className="w-9 h-9 rounded-md flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary"
>
  <Text
    className="text-sm"
  >
    test
  </Text>
</View>
`;

exports[`EmojiAvatar Snapshot - different sizes text emoji and diferent size 3`] = `
<View
  className="w-10 h-10 rounded-lg flex aspect-square items-center justify-center border border-solid border-f1-border-secondary bg-f1-background dark:bg-f1-background-inverse-secondary"
>
  <Text
    className="text-md"
  >
    test
  </Text>
</View>
`;
